<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_all_cards"
            android:icon="@drawable/ic_cards"
            android:title="@string/menu_all_cards" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/ic_tags"
            android:title="@string/menu_tags" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
    </group>
    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_statistics"
                android:icon="@drawable/ic_statistics"
                android:title="@string/menu_statistics" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu> 
